# agent-memo

./: CAPABILITY_CHECKLIST.md  README.md  install.sh  pyproject.toml
docs/: EXECUTION_CHECKLIST.md  ROADMAP.md
memory/: __init__.py
memory/cli/: distill.py  entrypoints.py  note.py  reflect.py  start.py  status.py  workflow.py
memory/core/: config.py  dedupe.py  paths.py  precedence.py  prompts.py  reflect_engine.py  schemas.py  trace_writer.py
memory/templates/: config.toml
skills/memory-distill/: SKILL.md  run.sh
skills/memory-note/: SKILL.md  run.sh
skills/memory-policy/: SKILL.md
skills/memory-reflect/: SKILL.md  run.sh
skills/memory-status/: SKILL.md  run.sh
tests/: test_distill.py  test_install.py
